[gd_scene load_steps=12 format=3 uid="uid://g851gkjp4fxq"]

[ext_resource type="Texture2D" uid="uid://dwd8xv8npm6gv" path="res://assets/tileset/BG1.png" id="1_uq56c"]
[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_y5dmf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6xwg"]
bg_color = Color(0.321569, 0.505882, 0.827451, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j0xdm"]
bg_color = Color(0.413201, 0.585919, 0.884277, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kkxfi"]
bg_color = Color(0.321569, 0.505882, 0.827451, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1mmtq"]
bg_color = Color(0.411765, 0.584314, 0.882353, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7wrxo"]
bg_color = Color(0.321569, 0.505882, 0.827451, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1qdgf"]
bg_color = Color(0.654902, 0.811765, 0.917647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f3m5n"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lh8o3"]
bg_color = Color(1, 0.434811, 0.36614, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wmnjn"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y5dmf")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(574, 325)
scale = Vector2(3.89844, 3.89844)
texture = ExtResource("1_uq56c")

[node name="TopControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -220.0
offset_right = 220.0
offset_bottom = 190.0
grow_horizontal = 2

[node name="RichTextLabel" type="RichTextLabel" parent="TopControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]Welcome to
[b][font_size=70][pulse freq=1][wave amp=60]Void Run![/wave][/pulse][/font_size][/b][/center]
"
metadata/_edit_use_anchors_ = true

[node name="BottomControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -257.0
offset_top = -242.0
offset_right = 257.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayButton" type="Button" parent="BottomControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.0
offset_top = 61.0
offset_right = 97.0
offset_bottom = 102.0
grow_horizontal = 2
theme_override_constants/icon_max_width = 30
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_c6xwg")
theme_override_styles/hover = SubResource("StyleBoxFlat_j0xdm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kkxfi")
text = "Play!"

[node name="CreditsButton" type="Button" parent="BottomControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.0
offset_top = 115.0
offset_right = 97.0
offset_bottom = 156.0
grow_horizontal = 2
theme_override_constants/icon_max_width = 30
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_c6xwg")
theme_override_styles/hover = SubResource("StyleBoxFlat_1mmtq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7wrxo")
text = "Credits"

[node name="CreditSheet" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 134.0
offset_top = 189.0
offset_right = -134.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1qdgf")

[node name="CloseButton" type="Button" parent="CreditSheet"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.870518
anchor_top = 0.0394737
anchor_right = 0.977092
anchor_bottom = 0.107456
offset_left = 2.36034e-05
grow_horizontal = 0
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_f3m5n")
theme_override_styles/hover = SubResource("StyleBoxFlat_lh8o3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wmnjn")
text = "Close"
metadata/_edit_use_anchors_ = true

[node name="CreditsLabel" type="Label" parent="CreditSheet"]
layout_mode = 0
anchor_left = 0.0189243
anchor_top = 0.0241228
anchor_right = 0.108566
anchor_bottom = 0.114035
theme_override_font_sizes/font_size = 30
text = "CREDITS"
metadata/_edit_use_anchors_ = true

[node name="ScrollText" type="RichTextLabel" parent="CreditSheet"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0622172
anchor_top = 0.210145
anchor_right = 0.937783
anchor_bottom = 0.929952
offset_right = 1.28746e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.421731, 0.421731, 0.421731, 1)
bbcode_enabled = true
text = "- Tileset: [url]https://aamatniekss.itch.io/free-pixelart-tileset-cute-forest[/url]
- Knight Asset: [url]https://aamatniekss.itch.io/fantasy-knight-free-pixelart-animated-character[/url]
"
metadata/_edit_use_anchors_ = true

[node name="MaintainersLabel" type="Label" parent="CreditSheet"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.323529
anchor_top = 0.031401
anchor_right = 0.671946
anchor_bottom = 0.125604
theme_override_colors/font_color = Color(0.423529, 0.423529, 0.423529, 1)
text = "Maintainers: Slaven Dzinic & Timo Wenz"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="BottomControl/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="BottomControl/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CreditSheet/CloseButton" to="." method="_on_close_button_pressed"]
